[package]
name = "zero2prod"
version = "0.1.0"
#authors = ["Inwerejosic <inwerejosic@protonmail.com>"]
edition = "2024"


[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.12.0"

[dependencies]
actix-web = "4.11.0"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1.0", features = ["derive"] }